--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,6 +1,3 @@
-# This workflow will upload a Python Package to PyPI when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
 name: Upload Python Package
 
 on:
@@ -29,7 +26,8 @@ jobs:
       - name: Build release distributions
         run: |
           python setup.py sdist bdist_wheel
-          
+        working-directory: ./  # Ensure we're in the root directory
+
       - name: Upload distributions
         uses: actions/upload-artifact@v4
         with:
