--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           python-version: "3.x"
 
+      - name: Debug folder structure
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "List files in current directory:"
+          ls -la
+
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
@@ -26,7 +32,7 @@ jobs:
       - name: Build release distributions
         run: |
           python setup.py sdist bdist_wheel
-        working-directory: ./  # Ensure we're in the root directory
+        working-directory: ./  # Ensure we are in the root directory where setup.py is located
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
